# RC_haskell

./: .gitignore
ch02/: FunctionWithLete.hs  FunctionWithWhere.hs  test.hs
ch03/: print1.hs  print2.hs  print3flipped.hs  reverse.hs  toporlocal.hs
ch04/: greetifcool.hs  greetifcool2.hs
ch05/: arith3broken.hs  determineTheType.hs  sing.hs  typeInference1.hs
ch06/: trivial.hs
ch07/: arith4.hs  exercises.hs  fizz.hs  gameoflife.hs  registeredUser1.hs
ch08/: factorial.hs
ch08/test/: test.cabal
ch08/test/src/: wordnumber.hs
ch08/test/test/: wordnumbertest.hs
ch08/wordnumber/: wordnumber.cabal
ch09/: cipher.hs  examples.hs
ch09/cipher/: cipher.cabal
ch09/cipher/app/: Main.hs
ch09/cipher/src/: cipher.hs
ch09/cipher/test/: Spec.hs
ch10/: examples.hs
ch11/: examples.hs
ch12/: examples.hs
ch13/: palindrome.hs  personage.hs
ch13/hangman/: hangman.cabal
ch13/hangman/exe/: Main.hs
ch13/hangman/src/: Hangman.hs
ch13/hangman/test/: test.hs
ch14/addition/: addition.cabal  addition.hs
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch15/: exercises.hs
ch15/orphan-instance/: ListyInstances.hs
ch16/: exercises.hs
ch17/: exercises.hs
ch17/applicative-exercises/: README.md  applicative-exercises.cabal
ch17/applicative-exercises/test/: Apl1.hs  BadMonoid.hs  Spec.hs
ch18/monad/: monad.cabal
ch18/monad/src/: exercises.hs
ch18/monad/test/: Spec.hs
ch19/shorty/: shorty.cabal
ch19/shorty/src/: .#Example.hs  Example.hs
ch20/: examples.hs
ch21/: examples.hs
ch21/examples/: examples.cabal
ch21/examples/src/: Lib.hs  examples.hs
ch21/examples/test/: Spec.hs
ch22/exercises/: exercises.cabal
ch22/exercises/src/: Lib.hs
ch22/exercises/test/: Spec.hs
ch23/state/: package.yaml
ch24/parse/: .gitignore  package.yaml
echo_server/: main.py
folds_presentation/: examples.hs
htorrent/: .gitignore  README.md  announce  demo.py  escapedPieces  htorrent.cabal  sha1ascii.hs  sha1ascii.py  sha1asciiuriencode.py  sha1hex.hs  sha1hex.py  stack.yaml
htorrent/app/: Main.hs
htorrent/src/: BEncode.hs  FileManager.hs  Lib.hs  Peer.hs  Server.hs  Tracker.hs  TrackerPrint.hs  Utils.hs  example-tcp-chat.hs  network-example-client.hs  network-example.hs  server.hs
htorrent/test/: Spec.hs
post_lunch_prep/path_sum/: README.md
tcp-client/: .gitignore  ChangeLog.md  package.yaml  stack.yaml
tcp-client/app/: Main.hs
tcp-server/: .gitignore  package.yaml  stack.yaml
tcp-server/app/: Main.hs
(+3 files in other folders)
