name:                test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WordNumber
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             wordnumbertest.hs
  build-depends:       base
                     , test
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , hspec >= 2.5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
