name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Hangman
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010

executable hangman
  ghc-options:         -Wall -fwarn-tabs
  main-is:             Main.hs
  hs-source-dirs:      exe
  build-depends:       base >= 4.7 && < 5
                     , hangman
  default-language:    Haskell2010

test-suite test
  ghc-options:         -Wall -fno-warn-orphans -fwarn-tabs
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  hs-source-dirs:      test
  build-depends:       base >=4.7 && <5
                       , hangman
                       , QuickCheck >= 2.11
                       , hspec >= 2.5
  default-language: Haskell2010